sfSandBoxCode/force-app/main/default/objects/Location_Demolition_Toilets__c/Location_Demolition_Toilets__c.object-meta.xml
<CustomObject>
    <label>Location Demolition Toilet</label>
    <nameField>
        <label>Location Demolition Toilets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Demolition Toilets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>