sfSandBoxCode/force-app/main/default/objects/Location_Demolition_Toilets__c/fields/Close_Toilet__c.field-meta.xml
<CustomField>
    <fullName>Close_Toilet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark the toilet as closes</description>
    <inlineHelpText>If this field is checked, the status of this toilet will change to Closed</inlineHelpText>
    <label>Close Toilet</label>
    <type>Checkbox</type>
</CustomField>