sfSandBoxCode/force-app/main/default/objects/Location_Demolition_Toilets__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Reason why the toilet was closed</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>