sfSandBoxCode/force-app/main/default/objects/Location_Demolition_Toilets__c/fields/Location_Demolition__c.field-meta.xml
<CustomField>
    <fullName>Location_Demolition__c</fullName>
    <label>Location Demolition</label>
    <referenceTo>Location_Demolition__c</referenceTo>
    <relationshipLabel>Location Demolition Toilets</relationshipLabel>
    <relationshipName>Location_Demolition_Toilets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>