sfSandBoxCode/force-app/main/default/objects/Location_Demolition_Toilets__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The toilet</description>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Location Demolition Toilets</relationshipLabel>
    <relationshipName>Location_Demolition_Toilets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>