sfSandBoxCode/force-app/main/default/objects/Location_Demolition_Toilets__c/fields/Toilet_Status__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Status__c</fullName>
    <label>Toilet Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demolished Indefinitely</fullName>
            </value>
            <value>
                <fullName>Demolished - To be rebuilt</fullName>
            </value>
            <value>
                <fullName>Demolished - To be relocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>